--- a/photography/Pages/Shared/_NoNameLayout.cshtml
+++ b/photography/Pages/Shared/_NoNameLayout.cshtml
@@ -13,7 +13,7 @@
     <header>
     </header>
 
-    <div class="container mw-100 mh-100" style="height: 1000px;">
+    <div class="w-100 h-100" style="position: fixed;">
         @RenderBody()
     </div>
 
