Massive update to UI and content

--- a/photography/Pages/Portfolio.cshtml
+++ b/photography/Pages/Portfolio.cshtml
@@ -7,7 +7,7 @@
 <div class="row">
     <div class="col w-25">
         <div class="container-h mb-2">
-            <img src="http://d1bu5rn6887f3r.cloudfront.net/mural1.jpg" alt="Mural" class="image-h">
+            <img src="https://d1bu5rn6887f3r.cloudfront.net/mural1.jpg" alt="Mural" class="image-h">
             <div class="overlay-h">
                 <div class="text-h">
                     <a href="../images/mural1.jpg" class="wl">Mural // Cookeville</a>
@@ -16,66 +16,37 @@
         </div>
 
         <div class="container-h mb-2">
-            <img src="http://d1bu5rn6887f3r.cloudfront.net/luna1.jpg" alt="Luna Dog" class="image-h">
+            <img src="https://d1bu5rn6887f3r.cloudfront.net/luna1.jpg" alt="Luna Dog" class="image-h">
             <div class="overlay-h">
                 <div class="text-h">
-                    <a href="http://d1bu5rn6887f3r.cloudfront.net/luna1.jpg" class="wl">Luna Doggy // Cookeville</a>
+                    <a href="https://d1bu5rn6887f3r.cloudfront.net/luna1.jpg" class="wl">Luna Doggy // Cookeville</a>
                 </div>
             </div>
         </div>
 
         <div class="container-h mb-2">
-            <img src="http://d1bu5rn6887f3r.cloudfront.net/restro.jpg" alt="Retro Car" class="image-h">
+            <img src="https://d1bu5rn6887f3r.cloudfront.net/restro.jpg" alt="Retro Car" class="image-h">
             <div class="overlay-h">
                 <div class="text-h">
-                    <a href="http://d1bu5rn6887f3r.cloudfront.net/restro.jpg" class="wl">Retro Cars // Cookeville</a>
+                    <a href="https://d1bu5rn6887f3r.cloudfront.net/restro.jpg" class="wl">Retro Cars // Cookeville</a>
                 </div>
             </div>
         </div>
 
         <div class="container-h mb-2">
-            <img src="http://d1bu5rn6887f3r.cloudfront.net/poets.jpg" alt="Coffee Shop" class="image-h">
+            <img src="https://d1bu5rn6887f3r.cloudfront.net/poets.jpg" alt="Coffee Shop" class="image-h">
             <div class="overlay-h">
                 <div class="text-h">
-                    <a href="http://d1bu5rn6887f3r.cloudfront.net/poets.jpg" class="wl">Poets // Cookeville</a>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="col w-25">
-        <div class="container-h mb-2">
-            <img src="http://d1bu5rn6887f3r.cloudfront.net/jnl.jpg" alt="Mom and Brother" class="image-h">
-            <div class="overlay-h">
-                <div class="text-h">
-                    <a href="http://d1bu5rn6887f3r.cloudfront.net//jnl.jpg" class="wl">Brother and Mom // Gallatin</a>
+                    <a href="https://d1bu5rn6887f3r.cloudfront.net/poets.jpg" class="wl">Poets // Cookeville</a>
                 </div>
             </div>
         </div>
 
         <div class="container-h mb-2">
-            <img src="http://d1bu5rn6887f3r.cloudfront.net/jla.jpg" alt="Brother" class="image-h">
+            <img src="https://d1bu5rn6887f3r.cloudfront.net/dndbg.jpg" alt="DnD Rolls" class="image-h">
             <div class="overlay-h">
                 <div class="text-h">
-                    <a href="http://d1bu5rn6887f3r.cloudfront.net/jla.jpg" class="wl">Brother // Gallatin</a>
-                </div>
-            </div>
-        </div>
-
-        <div class="container-h mb-2">
-            <img src="http://d1bu5rn6887f3r.cloudfront.net/nmural.jpg" alt="Girl at Mural" class="image-h">
-            <div class="overlay-h">
-                <div class="text-h">
-                    <a href="http://d1bu5rn6887f3r.cloudfront.net/nmural.jpg" class="wl">Girl at Mural // Cookeville</a>
-                </div>
-            </div>
-        </div>
-
-        <div class="container-h mb-2">
-            <img src="http://d1bu5rn6887f3r.cloudfront.net/pbg.jpg" alt="Waterfall" class="image-h">
-            <div class="overlay-h">
-                <div class="text-h">
-                    <a href="http://d1bu5rn6887f3r.cloudfront.net/pbg.jpg" class="wl">Waterfall // Waterloo</a>
+                    <a href="https://d1bu5rn6887f3r.cloudfront.net/dndbg.jpg" class="wl">DnD Rolls // Cookeville</a>
                 </div>
             </div>
         </div>
@@ -83,37 +54,84 @@
 
     <div class="col w-25">
         <div class="container-h mb-2">
-            <img src="http://d1bu5rn6887f3r.cloudfront.net/houseplant.jpg" alt="Dying Plant" class="image-h">
+            <img src="https://d1bu5rn6887f3r.cloudfront.net/jnl.jpg" alt="Mom and Brother" class="image-h">
             <div class="overlay-h">
                 <div class="text-h">
-                    <a href="http://d1bu5rn6887f3r.cloudfront.net/houseplant.jpg" class="wl">Dying Plant // Cookeville</a>
+                    <a href="https://d1bu5rn6887f3r.cloudfront.net/jnl.jpg" class="wl">Brother and Mom // Gallatin</a>
                 </div>
             </div>
         </div>
 
         <div class="container-h mb-2">
-            <img src="http://d1bu5rn6887f3r.cloudfront.net/luna2.jpg" alt="Luna Dog" class="image-h">
+            <img src="https://d1bu5rn6887f3r.cloudfront.net/jla.jpg" alt="Brother" class="image-h">
             <div class="overlay-h">
                 <div class="text-h">
-                    <a href="http://d1bu5rn6887f3r.cloudfront.net/luna2.jpg" class="wl">More Luna // Cookeville</a>
+                    <a href="https://d1bu5rn6887f3r.cloudfront.net/jla.jpg" class="wl">Brother // Gallatin</a>
                 </div>
             </div>
         </div>
 
         <div class="container-h mb-2">
-            <img src="http://d1bu5rn6887f3r.cloudfront.net/layuh.jpg" alt="Leia Dog" class="image-h">
+            <img src="https://d1bu5rn6887f3r.cloudfront.net/nmural.jpg" alt="Girl at Mural" class="image-h">
             <div class="overlay-h">
                 <div class="text-h">
-                    <a href="http://d1bu5rn6887f3r.cloudfront.net/layuh.jpg" class="wl">Leia Doggy // Cookeville</a>
+                    <a href="https://d1bu5rn6887f3r.cloudfront.net/nmural.jpg" class="wl">Girl at Mural // Cookeville</a>
                 </div>
             </div>
         </div>
 
         <div class="container-h mb-2">
-            <img src="http://d1bu5rn6887f3r.cloudfront.net/cherry.jpg" alt="Classic Car" class="image-h">
+            <img src="https://d1bu5rn6887f3r.cloudfront.net/pbg.jpg" alt="Waterfall" class="image-h">
             <div class="overlay-h">
                 <div class="text-h">
-                    <a href="http://d1bu5rn6887f3r.cloudfront.net/cherry.jpg" class="wl">Cherry // Cookeville</a>
+                    <a href="https://d1bu5rn6887f3r.cloudfront.net/pbg.jpg" class="wl">Waterfall // Waterloo</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="col w-25">
+        <div class="container-h mb-2">
+            <img src="https://d1bu5rn6887f3r.cloudfront.net/houseplant.jpg" alt="Dying Plant" class="image-h">
+            <div class="overlay-h">
+                <div class="text-h">
+                    <a href="https://d1bu5rn6887f3r.cloudfront.net/houseplant.jpg" class="wl">Dying Plant // Cookeville</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="container-h mb-2">
+            <img src="https://d1bu5rn6887f3r.cloudfront.net/luna2.jpg" alt="Luna Dog" class="image-h">
+            <div class="overlay-h">
+                <div class="text-h">
+                    <a href="https://d1bu5rn6887f3r.cloudfront.net/luna2.jpg" class="wl">More Luna // Cookeville</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="container-h mb-2">
+            <img src="https://d1bu5rn6887f3r.cloudfront.net/layuh.jpg" alt="Leia Dog" class="image-h">
+            <div class="overlay-h">
+                <div class="text-h">
+                    <a href="https://d1bu5rn6887f3r.cloudfront.net/layuh.jpg" class="wl">Leia Doggy // Cookeville</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="container-h mb-2">
+            <img src="https://d1bu5rn6887f3r.cloudfront.net/cherry.jpg" alt="Classic Car" class="image-h">
+            <div class="overlay-h">
+                <div class="text-h">
+                    <a href="https://d1bu5rn6887f3r.cloudfront.net/cherry.jpg" class="wl">Cherry // Cookeville</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="container-h mb-2">
+            <img src="https://d1bu5rn6887f3r.cloudfront.net/me.jpg" alt="Self Shot" class="image-h">
+            <div class="overlay-h">
+                <div class="text-h">
+                    <a href="https://d1bu5rn6887f3r.cloudfront.net/me.jpg" class="wl">Self Shot // Cookeville</a>
                 </div>
             </div>
         </div>
