--- a/photography/Pages/Shared/_Layout.cshtml
+++ b/photography/Pages/Shared/_Layout.cshtml
@@ -7,19 +7,24 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="https://use.typekit.net/luq0pra.css">
+    <link rel="icon" href="~/favicon.ico">
     <script src="https://kit.fontawesome.com/174548596b.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">Jeffrey // Adams</a>
+                <a class="navbar-brand" asp-area="" asp-page="/Index">
+                    <font class="blue-bold text-dark">J</font>
+                    <font class="blue-bold text-primary">//</font>
+                    <font class="blue-bold text-dark">A</font>
+                </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <ul class="navbar-nav flex-grow-1">
+                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row">
+                    <ul class="navbar-nav flex-grow-1 text-center">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
