--- a/photography/Pages/aboutme.cshtml
+++ b/photography/Pages/aboutme.cshtml
@@ -18,156 +18,154 @@
     </div>
 </div>
 
-<div class="container-fluid ">
+<div class="container-fluid mb-5">
     <div class="row">
         <div class="col-lg-2 col-md-12 col-sm-12 col-xs-12 text-left mt-5">
-            <div class="w-100">
-                <ul style="list-style: none;">
-                    <li><font class="fbold">Previous Posts</font></li>
-                    <li><a href="../archive/001/">Jan. 1, 2020 - First Blog</a></li>
-                    <li><a href="../archive/001/">Jan. 1, 2020 - First Blog</a></li>
-                    <li><a href="../archive/001/">Jan. 1, 2020 - First Blog</a></li>
-                </ul>
-            </div>
+            
         </div>
         <div class="col-lg-8 col-md-12 col-sm-12 col-xs-12 text-center mt-5">
             <div class="card w-100 rounded-0 text-left">
                 <div class="card-body">
                     <div class="row">
                         <div class="col-3">
-                            <img src="http://d1bu5rn6887f3r.cloudfront.net/chef.png" class="w-100" />
                         </div>
-                        <div class="col-9">
-                            <h5 class="card-title text-primary">Chef Infra from a Beginner</h5>
-                            <h6 class="card-subtitle mb-3 text-muted">
-                                <img src="http://d1bu5rn6887f3r.cloudfront.net/face.jpg" class="br-50 mr-2" />
-                                <a href="/aboutme/"> Jeffrey Adams</a>
-                                <font class="weight-100 text-muted">6/4/2020 10:55 PM</font>
-                            </h6>
-                            <p class="card-text weight-100">
-                                I'm relatively new to the infrastructure side of DevOps so
-                                a lot of this is new to me. This post is more or less about my struggles through the piles
-                                of documentation as well as geting familiar with Ruby.
-                            </p>
-                            <a href="#" class="card-link">Read More</a>
+                        <div class ="col-9">
+                            <h5 class="card-title text-primary text-center">Jeffrey Adams</h5>
+                                <h6 class="card-subtitle mb-3 text-center text-secondary">
+                                    <font class="weight-100">DevOps Engineer at Wellpath</font>
+                                </h6>
                         </div>
                     </div>
-                </div>
-            </div>
-            <div class="card w-100 rounded-0 mt-4 text-left">
-                <div class="card-body">
                     <div class="row">
-                        <div class="col-3">
-                            <img src="http://d1bu5rn6887f3r.cloudfront.net/ruby.png" class="w-100" />
+                        <div class="col-3 pr-0">
+                            <img src="https://d1bu5rn6887f3r.cloudfront.net/face.jpg" class="w-100 rounded-circle shadow" />
                         </div>
-                        <div class="col-9">
-                            <h5 class="card-title">Learning Ruby</h5>
-                            <h6 class="card-subtitle mb-3 text-muted">
-                                <img src="http://d1bu5rn6887f3r.cloudfront.net/face.jpg" class="br-50 mr-2" />
-                                <a href="/aboutme/"> Jeffrey Adams</a>
-                                <font class="weight-100 text-muted">6/4/2020 10:55 PM</font>
-                            </h6>
-                            <p class="card-text weight-100">
-                                I'm relatively new to the infrastructure side of DevOps so
-                                a lot of this is new to me. This post is more or less about my struggles through the piles
-                                of documentation as well as geting familiar with Ruby.
-                            </p>
-                            <a href="#" class="card-link">Read More</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="card w-100 rounded-0 mt-4 text-left">
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-3">
-                            <img src="http://d1bu5rn6887f3r.cloudfront.net/chef.png" class="w-100" />
-                        </div>
-                        <div class="col-9">
-                            <h5 class="card-title">Chef Infra from a Beginner</h5>
-                            <h6 class="card-subtitle mb-3 text-muted">
-                                <img src="http://d1bu5rn6887f3r.cloudfront.net/face.jpg" class="br-50 mr-2" />
-                                <a href="/aboutme/"> Jeffrey Adams</a>
-                                <font class="weight-100 text-muted">6/4/2020 10:55 PM</font>
-                            </h6>
-                            <p class="card-text weight-100">
-                                I'm relatively new to the infrastructure side of DevOps so
-                                a lot of this is new to me. This post is more or less about my struggles through the piles
-                                of documentation as well as geting familiar with Ruby.
-                            </p>
-                            <a href="#" class="card-link">Read More</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="card w-100 rounded-0 mt-4 text-left">
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-3">
-                            <img src="http://d1bu5rn6887f3r.cloudfront.net/chef.png" class="w-100" />
-                        </div>
-                        <div class="col-9">
-                            <h5 class="card-title">Chef Infra from a Beginner</h5>
-                            <h6 class="card-subtitle mb-3 text-muted">
-                                <img src="http://d1bu5rn6887f3r.cloudfront.net/face.jpg" class="br-50 mr-2" />
-                                <a href="/aboutme/"> Jeffrey Adams</a>
-                                <font class="weight-100 text-muted">6/4/2020 10:55 PM</font>
-                            </h6>
-                            <p class="card-text weight-100">
-                                I'm relatively new to the infrastructure side of DevOps so
-                                a lot of this is new to me. This post is more or less about my struggles through the piles
-                                of documentation as well as geting familiar with Ruby.
-                            </p>
-                            <a href="#" class="card-link">Read More</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="card w-100 rounded-0 mt-4 mb-5 text-left">
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-3">
-                            <img src="http://d1bu5rn6887f3r.cloudfront.net/chef.png" class="w-100" />
-                        </div>
-                        <div class="col-9">
-                            <h5 class="card-title">Chef Infra from a Beginner</h5>
-                            <h6 class="card-subtitle mb-3 text-muted">
-                                <img src="http://d1bu5rn6887f3r.cloudfront.net/face.jpg" class="br-50 mr-2" />
-                                <a href="/aboutme/"> Jeffrey Adams</a>
-                                <font class="weight-100 text-muted">6/4/2020 10:55 PM</font>
-                            </h6>
-                            <p class="card-text weight-100">
-                                I'm relatively new to the infrastructure side of DevOps so
-                                a lot of this is new to me. This post is more or less about my struggles through the piles
-                                of documentation as well as geting familiar with Ruby.
-                            </p>
-                            <a href="#" class="card-link">Read More</a>
-                        </div>
+                        <div class="col-9 mb-3">
+                            
+                            <div class="container">
+                                <p class="card-text weight-100">
+                                    I am a 29 year DevOps Engineer in Nashville, TN. I have a AS in Computer Information
+                                    Technology with a focus in Programming. I've worked for several years as a freelance
+                                    web developer as well as a working in the food service industry.
+                                </p>
+                                <h6 class="text-center text-primary">Developmental Skillset</h6>
+                                <div class="row mt-3 mb-3" id="row-unhide">
+                                    <div class="card weight-100 text-primary text-center w-100 rounded-0">
+                                        <div class="card-text">
+                                            HTML5
+                                        </div>
+                                        <div class="card-text">
+                                            CSS3
+                                        </div>
+                                        <div class="card-text">
+                                            JavaScript
+                                        </div>
+                                        <div class="card-text">
+                                            MySQL
+                                        </div>
+                                        <div class="card-text">
+                                            C#
+                                        </div>
+                                        <div class="card-text">
+                                            PowerShell
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row mt-3 mb-3" id="row-hide">
+                                    <div class="col-2 text-center">
+                                        <img src="images/htmlr.png" class="rounded-circle shadow" style="width: 50px;" />
+                                        <p class="card-text weight-100 mt-3">HTML 5</p>
+                                    </div>
+                                    <div class="col-2 text-center">
+                                        <img src="images/cssr.png" class="rounded-circle shadow" style="width: 50px;" />
+                                        <p class="card-text weight-100 mt-3">CSS 3</p>
+                                    </div>
+                                    <div class="col-2 text-center">
+                                        <img src="images/jsr.png" class="rounded-circle shadow" style="width: 50px;" />
+                                        <p class="card-text weight-100 mt-3">Javascript</p>
+                                    </div>
+                                    <div class="col-2 text-center">
+                                        <img src="images/sqlr.png" class="rounded-circle shadow" style="width: 50px;" />
+                                        <p class="card-text weight-100 mt-3">MySQL</p>
+                                    </div>
+                                    <div class="col-2 text-center">
+                                        <img src="images/csharp.png" class="rounded-circle shadow" style="width: 50px;" />
+                                        <p class="card-text weight-100 mt-3">C#</p>
+                                    </div>
+                                    <div class="col-2 text-center">
+                                        <img src="images/psr.png" class="rounded-circle shadow" style="width: 50px;" />
+                                        <p class="card-text weight-100 mt-3">PowerShell</p>
+                                    </div>
+                                </div>
+                                <p class="card-text weight-100">
+                                    I am a tech enthusiast who has spent the majority of his life in the food
+                                    service industry. Over the last ten years, the service industry has taught me a lot of
+                                    soft skills that have translated very well into my career in IT. I've learned to handle
+                                    high stress and intense situations while maintaining high levels of communication. This
+                                    has served me very well in the collaborative environment that a DevOps team typically
+                                    operates around.
+                                </p>
+                                <p class="card-text weight-100">
+                                    <font class="font-weight-bold">HTML 5 - </font>
+                                    Though it tends to be considered a rather simple skillset to maintain, HMTL is the frame
+                                    to building a lot of very unique and reactive web pages. I think it is very important
+                                    to maintain a good understanding of all the fundamentals behind web development and
+                                    programming to stay as current and cutting edge as possible. To me, this means staying
+                                    up to date with HTML and using it on a regular basis to have that understanding to
+                                    truly build some amazing websites.
+                                </p>
+                                <p class="card-text weight-100">
+                                    <font class="font-weight-bold">CSS3 - </font>
+                                    CSS is probably one of my favorite aspects of web design. I tend to think of myself
+                                    as a CSS purist, so I always try to resort to a pure CSS design before falling back to
+                                    scripting website behavior. Not because I don't understand or do not enjoy scripting, I
+                                    just like the idea of having a website that can support all browers and reach a wider
+                                    audience.
+                                </p>
+                                <p class="card-text weight-100">
+                                    <font class="font-weight-bold">Javascript - </font>
+                                    Javascript is something I've only had a year-ish of experience in but am quickly falling
+                                    in love. It's versatility along with its power make it a strong choice for some awesome
+                                    front-end web design solutions as well as a very powerful backend tool. Though most of
+                                    my experience comes from the frontend side of things, I've explored and experienced alot
+                                    of what it can do over the last year as a backend resource and look forward to diving
+                                    more into it in the near future.
+                                </p>
+                                <p class="card-text weight-100">
+                                    <font class="font-weight-bold">MySQL - </font>
+                                    Though I would consider this one of my weakest skillsets, I have taken many courses
+                                    and worked very extensively in MySQL. For my current position, we often have to script
+                                    SQL changes and run queries that show metrics and user activity accross multipe sites
+                                    and servers. Though my use cases have been relatively niche, I look forward to using
+                                    and learning MySQL in a larger capacity.
+                                </p>
+                                <p class="card-text weight-100">
+                                    <font class="font-weight-bold">C# - </font>
+                                    C# has been a major focus on my studies since I started my journey in to development
+                                    and is the main language I used through out my collegiate career. The current position
+                                    I maitain is heavily built with the .NET Framework and thus relies on a wide array of
+                                    knowledge and creativitiy with this language. Though I am comfortable with C#, I would
+                                    far from consider myself an expert. I have about 2 years of experience with it and already
+                                    know that I need many many more to really scratch the service of its capablities, a
+                                    challenge for which I am well suited for in my opinion.
+                                </p>
+                                <p class="card-text weight-100">
+                                    <font class="font-weight-bold">PowerShell - </font>
+                                    This is a new weapon in my DevOps arsenal that I've been using the last 3 months. However,
+                                    I think it may be new favorite skill that I have picked up. The idea of scripting and
+                                    possibly automating and entire environment is not only exciting but such a fun challenge
+                                    for me. I've written several scripts for my current company based around remote configuration
+                                    as well as monitoring. Though I'm still a PowerShell novice at best, I am very excited to
+                                    learn more about its capablities and really push it to the limit as a development tool. 
+                                </p>
+                            </div>
+                        </div>    
                     </div>
                 </div>
             </div>
         </div>
         <div class="col-lg-2 col-md-12 col-sm-12 col-xs-12 text-left mt-5">
-            <div class="w-100 whitebox p-2">
-                <ul>
-                    <li><font class="fbold">Helpful Links</font></li>
-                    <li><a href="../archive/001/">Stack Overflow</a></li>
-                    <li><a href="../archive/001/">MS Docs</a></li>
-                    <li><a href="../archive/001/">Tech Blog</a></li>
-                </ul>
-                <div class="border border-bottom border-light"></div>
-                <ul>
-                    <li><a href="../archive/001/">Stack Overflow</a></li>
-                    <li><a href="../archive/001/">MS Docs</a></li>
-                    <li><a href="../archive/001/">Tech Blog</a></li>
-                </ul>
-                <div class="border border-bottom border-light"></div>
-                <ul>
-                    <li><a href="../archive/001/">Stack Overflow</a></li>
-                    <li><a href="../archive/001/">MS Docs</a></li>
-                    <li><a href="../archive/001/">Tech Blog</a></li>
-                </ul>
-            </div>
+            
         </div>
     </div>
 </div>
