--- a/photography/Pages/archive/a01.cshtml
+++ b/photography/Pages/archive/a01.cshtml
@@ -66,6 +66,26 @@
                                     any opportunity I could get and was eager to learn and adapt to the new set of
                                     responsibliites.
                                 </p>
+                                <p class="card-text weight-100">
+                                    Though I tend to think of DevOps as more of a culture and methodology, I do maintain
+                                    the view that the role of DevOps Engineer is an important one. Though it tends to be
+                                    more important toward the beginning of the shift to the DevOps methodology as a curator
+                                    of the ideals and a bridge between the development and operations. I like to see myself
+                                    as an arbiter of those core values that Agile teachs but spread accross an entire IT
+                                    department. Eventually the goal, in my very humble opinion, should be to have very little
+                                    distinction between Development or Operations. Instead, it should feel as if the IT team
+                                    all focuses toward one goal and task and sets out to make that happen. Though there will
+                                    always be need for expertise and it is very unreseaonable to expect to build a team that
+                                    understands ever aspect of your develoment process, blurring the lines a bit between
+                                    each side of said process can really bring a cohesivness and fludity to your team.
+                                </p>
+                                <p class="card-text weight-100">
+                                    Now that I am done rambling. Thats just a little bit about me and my attitude toward a role
+                                    that I honestly, don't fully understand yet. However, you can bet that I am absolutely loving
+                                    it and so excited to learn and grow in the field of DevOps. I have a lot to learn but my goal
+                                    is to be as teachable and coachable as humanly possible and just act as a sponge and soak up
+                                    everything I can. Not just as personal growth, but to bring the most value to my team as I can.
+                                </p>
                             </div>
                         </div>
                     </div>
