--- a/photography/Pages/Shared/_PhotoLayout.cshtml
+++ b/photography/Pages/Shared/_PhotoLayout.cshtml
@@ -10,14 +10,14 @@
     <link rel="stylesheet" href="https://use.typekit.net/luq0pra.css">
     <script src="https://kit.fontawesome.com/174548596b.js" crossorigin="anonymous"></script>
 </head>
-<body style="margin: 0px;background-image: url(http://d1bu5rn6887f3r.cloudfront.net/bg.jpg);background-position: center;background-size: cover; ">
+<body style="margin: 0px;background-image: url(https://d1bu5rn6887f3r.cloudfront.net/bg.jpg);background-position: center;background-size: cover; ">
     <header>
         <nav class="pnav d-flex row" style="color: #fff;">
             <div class="col ml-2">
                 <font>J. Adams // Photography</font>
             </div>
             <div class="col" style="text-align: center;">
-                <a href="/home" class="white-link mx-2">Home</a>
+                <a href="/Index" class="white-link mx-2">Home</a>
                 <a href="/portfolio" class="white-link mx-2">Portfolio</a>
                 <a href="/contactme" class="white-link mx-2">Contact</a>
             </div>
